--- a/style.css
+++ b/style.css
@@ -155,6 +155,96 @@ a {
     margin-top: 153px;
 }
 
+.list-2 {
+    width: 100%;
+    display: flex;
+    height: 600px;
+}
+
+.list-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 120px;
+    margin: 0 auto;
+}
+
+.title-txt {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.title-txt a {
+    color: #7B7B7B;
+}
+
+.title-txt h4 {
+    width: 494px;
+    font-weight: 600px;
+    font-size: 39px;
+    line-height: 124%;
+    letter-spacing: 0%;
+}
+
+.title-txt p {
+    width: 469px;
+    font-family: Work Sans;
+    font-weight: 400px;
+    font-size: 16px;
+    line-height: 151%;
+    color: #7B7B7B;
+    text-align: left;
+}
+
+.title-txt button {
+    width: 150px;
+    height: 50px;
+    box-shadow: 4px 5px 15px 0px #FF530066;
+    background: #FF5300;
+    border-radius: 4px;
+    border: none;
+    color: white;
+}
+
+.title-txt span {
+    color: #FF5300;
+}
+
+.list-3 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+.cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.card {
+    box-shadow: 0px 1px 10px 0px #0000001A;
+    width: 270px;
+    height: 200px;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 20px;
+}
+
+.card p {
+    font-weight: 400px;
+    font-size: 16px;
+    line-height: 151%;
+    letter-spacing: 0%;
+    text-align: center;
+    display: flex;
+    margin: 0 auto;
+    width: 206px;
+    color: #373737;
+}
 
 /* .program{
     display: flex;
@@ -246,6 +336,47 @@ a {
         height: 225px;
     }
 
+    .list-text {
+        display: flex;
+        margin-top: 90px;
+        flex-direction: column;
+    }
+    .title-txt a{
+        margin: 0 auto;
+    }
+    .title-txt h4 {
+        font-weight: 500px;
+        font-size: 25px;
+        line-height: 124%;
+        text-align: center;
+        width: 262px;
+        margin:  0 auto;
+    }
+
+    .title-txt p {
+        font-weight: 400px;
+        font-size: 16px;
+        line-height: 151%;
+        letter-spacing: 0%;
+        text-align: center;
+        width: 323px;
+    }
+
+    .title-txt button{
+        margin: 0 auto;
+    }
+    .title-2 img {
+        width: 372px;
+        height: 192px;
+    }
+    .cards{
+        display: flex;
+        flex-direction: column;
+        margin-top: 120px;
+        
+    }
+
+
 }
 
 @media (min-width:768px) and (max-width:1200px) {
@@ -278,14 +409,15 @@ a {
         letter-spacing: 0%;
     }
 
-  
-    .title{
+
+    .title {
         display: flex;
         justify-content: center;
         align-items: flex-start;
         gap: 25px;
     }
-    .imgs-1{
+
+    .imgs-1 {
         display: flex;
         justify-content: end;
         align-items: end;
