--- a/style.css
+++ b/style.css
@@ -214,6 +214,7 @@ a {
 .list-3 {
     width: 100%;
     display: flex;
+    height: 400px;
     justify-content: center;
     gap: 30px;
 }
@@ -244,6 +245,103 @@ a {
     margin: 0 auto;
     width: 206px;
     color: #373737;
+}
+
+.list-4 {
+    width: 100%;
+    height: 800px;
+    background: #FFF7F4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.title-4 {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 18px;
+    width: 570px;
+}
+
+.title-4 span {
+    color: #FF5300;
+}
+
+.title-4 h3 {
+    font-family: sans-serif;
+    width: 487px;
+    font-weight: 600px;
+    font-size: 39px;
+    line-height: 124%;
+}
+
+.title-4 p {
+    width: 469px;
+    font-family: sans-serif;
+    font-weight: 400px;
+    font-size: 16px;
+    line-height: 151%;
+    letter-spacing: 0%;
+    color: #7B7B7B;
+}
+
+.title-4 button {
+    width: 150px;
+    box-shadow: 4px 5px 15px 0px #FF530066;
+    background: #FF5300;
+    border: none;
+    border-radius: 6px;
+    height: 50px;
+}
+
+.cards-4 {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    align-items: center;
+    flex-direction: column;
+}
+
+.cards-5 {
+    display: flex;
+    margin-top: 83px;
+    justify-content: center;
+    gap: 30px;
+    align-items: center;
+    flex-direction: column;
+}
+
+
+.card-4 {
+    width: 270px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 250px;
+    box-shadow: 0px 1px 10px 0px #0000001A;
+    gap: 18px;
+
+}
+
+.card-4 h1 {
+    font-family: sans-serif;
+    font-weight: 700px;
+    font-size: 48px;
+    line-height: 124%;
+    letter-spacing: 0%;
+    text-transform: capitalize;
+
+}
+
+.card-4 p {
+    font-family: sans-serif;
+    font-weight: 500px;
+    font-size: 20px;
+    line-height: 124%;
+    color: #7B7B7B;
 }
 
 /* .program{
@@ -376,9 +474,48 @@ a {
     .cards {
         display: flex;
         flex-direction: column;
-        margin-top: 120px;
+        margin-top: 500px;
 
     }
+
+    .card-4 {
+        width: 343px;
+        height: 250px;
+    }
+
+    .list-4 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+        width: 100%;
+        height: 2700px;
+        background: none;
+        flex-direction: column;
+    }
+
+    .title-4 h3 {
+        font-weight: 500px;
+        font-size: 25px;
+        line-height: 124%;
+        text-align: center;
+        width: 262px;
+        margin: 0 auto
+    }
+
+    .title-4 p {
+        font-weight: 400px;
+        font-size: 16px;
+        line-height: 151%;
+        text-align: center;
+        width: 323px;
+        margin: 0 auto;
+    }
+
+    .title-4 button {
+        margin: 0 auto;
+    }
+
 
 
 }
@@ -459,6 +596,7 @@ a {
         font-size: 31px;
         line-height: 124%;
     }
+
     .title-txt p {
         font-weight: 400px;
         margin: 0 auto;
@@ -467,17 +605,68 @@ a {
         line-height: 151%;
         width: 323px;
     }
-    .cards{
+
+    .cards {
         display: flex;
         gap: 5px;
     }
-    .card{
+
+    .card {
         height: 230px;
         width: 180px;
     }
-    .card p{
+
+    .card p {
         width: 150px;
         font-size: 14px;
+        margin: 0 auto;
+    }
+
+    .title-4 h3 {
+        font-family: sans-serif;
+        font-weight: 600px;
+        font-size: 31px;
+        width: 332px;
+        line-height: 124%;
+    }
+
+    .title-4 p {
+        font-family: sans-serif;
+        font-weight: 400px;
+        font-size: 16px;
+        line-height: 151%;
+        width: 331px;
+    }
+
+    .card-4 {
+        width: 162px;
+        height: 150px;
+        display: flex;
+        text-align: center;
+        flex-wrap: wrap;
+        margin: 0 auto;
+        justify-content: center;
+    }
+    .list-4{
+        gap: 28px;
+        overflow: hidden;
+        padding: 0 122px;
+        background: none;
+        display: flex;
+    }
+  
+
+    .card-4 h1 {
+        font-family: sans-serif;
+        font-weight: 500px;
+        font-size: 25px;
+        line-height: 124%;
+    }
+    .cards-4{
+        gap: 8px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         margin: 0 auto;
     }
 }
