--- a/style.css
+++ b/style.css
@@ -71,9 +71,7 @@ header {
     transition: 0.5s;
 }
 
-.arev {
-    display: none;
-}
+
 
 li {
     list-style: none;
@@ -189,7 +187,7 @@ a {
 
 .title-txt p {
     width: 469px;
-    font-family: Work Sans;
+    font-family: sans-serif;
     font-weight: 400px;
     font-size: 16px;
     line-height: 151%;
@@ -330,7 +328,6 @@ a {
     font-family: sans-serif;
     font-weight: 700px;
     font-size: 48px;
-    line-height: 124%;
     letter-spacing: 0%;
     text-transform: capitalize;
 
@@ -340,8 +337,81 @@ a {
     font-family: sans-serif;
     font-weight: 500px;
     font-size: 20px;
-    line-height: 124%;
     color: #7B7B7B;
+}
+
+.list-5 {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+    flex-direction: column;
+    min-height: 600px;
+    display: flex;
+}
+
+
+
+.title-5 h4 {
+    font-family: sans-serif;
+    font-weight: 600px;
+    font-size: 40px;
+    text-align: center;
+    width: 406px;
+    margin: 0 auto;
+}
+
+.title-5 span {
+    color: #FF5300;
+}
+
+.cards-55 {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    margin-top: 60px;
+}
+
+
+.card-5 {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 270px;
+    gap: 24px;
+    min-width: 100;
+    box-shadow: 2px 1px 10px 12px #0000001A;
+    height: 390px;
+    transition: 0.5s;
+}
+
+
+.card-5 p {
+    font-family: sans-serif;
+    font-weight: 500px;
+    font-size: 20px;
+    line-height: 124%;
+}
+
+.card-5 span {
+    font-family: sans-serif;
+    font-weight: 400px;
+    font-size: 16px;
+    line-height: 151%;
+    color: #7B7B7B;
+}
+
+.card-5 img {
+    transition: 0.5s;
+}
+
+.card-5:hover {
+    margin-top: -40px;
+    opacity: 80%;
+}
+
+.card-5 img:hover {
+    transform: scale(1.05);
 }
 
 /* .program{
@@ -386,6 +456,7 @@ a {
         letter-spacing: 0%;
         text-align: center;
     }
+
 
     .list-1 {
         width: 100%;
@@ -489,7 +560,7 @@ a {
         align-items: center;
         overflow: hidden;
         width: 100%;
-        height: 2700px;
+        height: 2665px;
         background: none;
         flex-direction: column;
     }
@@ -515,8 +586,37 @@ a {
     .title-4 button {
         margin: 0 auto;
     }
+   
 
+    .list-5 {
+        overflow: hidden;
+    }
 
+    .cards-55 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+    }
+
+    .card-5:hover {
+        margin-top: 0px;
+        opacity: 100%;
+    }
+
+    .card-5 img:hover {
+        transform: scale(1.0);
+    }
+
+    .title-5 h4 {
+        font-family: sans-serif;
+        font-weight: 600px;
+        font-size: 30px;
+        text-align: center;
+        width: 286px;
+        margin: 0 auto;
+    }
 
 }
 
@@ -647,14 +747,16 @@ a {
         margin: 0 auto;
         justify-content: center;
     }
-    .list-4{
+
+    .list-4 {
         gap: 28px;
+        padding: 0 11px;
         overflow: hidden;
         padding: 0 122px;
         background: none;
         display: flex;
     }
-  
+
 
     .card-4 h1 {
         font-family: sans-serif;
@@ -662,11 +764,25 @@ a {
         font-size: 25px;
         line-height: 124%;
     }
-    .cards-4{
+
+    .cards-4 {
         gap: 8px;
         display: flex;
         justify-content: center;
         align-items: center;
         margin: 0 auto;
+    }
+
+    .cards-55{
+        display: flex;
+        flex-wrap: wrap;
+    }
+        .card-5:hover {
+        margin-top: -20px;
+        opacity: 100%;
+    }
+
+    .card-5 img:hover {
+        transform: scale(1.0);
     }
 }
