--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ header {
     box-shadow: 0px 1px 10px 0px #0000001A;
     height: 100px;
 }
+.menu button{
+    border-radius: 5px;
+}
 
 .logo {
     font-family: Work Sans;
@@ -71,7 +74,10 @@ header {
     transition: 0.5s;
 }
 
-
+.dark-mode{
+    background: #171616;
+    color: white;
+}
 
 li {
     list-style: none;
@@ -89,7 +95,6 @@ a {
 .list-1 {
     width: 100%;
     min-height: 600px;
-    background: #FFF7F4;
     display: flex;
     overflow: hidden;
     display: flex;
@@ -436,6 +441,15 @@ a {
     width: 649px;
 }
 
+.card-6 img {
+    transition: 0.5s;
+    /* border-radius: 10px; */
+}
+
+.card-6 img:hover {
+    transform: scale(1.05);
+}
+
 .title-6 span {
     color: #FF5300;
 }
@@ -456,6 +470,264 @@ a {
 .cards-7 {
     display: flex;
 }
+
+.list-7 {
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    width: 100%;
+    height: 600px;
+    text-align: center;
+}
+
+.list-7 h4 {
+    font-family: sans-serif;
+    margin: 0 auto;
+    font-weight: 600px;
+    font-size: 39px;
+    line-height: 124%;
+    text-align: center;
+    width: 542px;
+}
+
+.list-7 h4 span {
+    color: #FF5300;
+}
+
+.cards-n7 {
+    display: flex;
+    justify-content: center;
+    margin-top: 60px;
+    gap: 30px;
+    /* align-items: center; */
+    /* flex-direction: column; */
+}
+
+.card-7 {
+    width: 570px;
+    height: 294px;
+    overflow: hidden;
+    box-shadow: 0px 1px 10px 0px #0000001A;
+}
+
+.card-txt-7 {
+    display: flex;
+    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25px;
+    gap: 48px;
+}
+
+.card-txt-7 p {
+    text-align: left;
+    font-weight: 500px;
+    font-size: 25px;
+    line-height: 124%;
+    width: 308px;
+}
+
+.profile-7 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    width: 330px;
+    margin-left: 25px;
+    /* justify-content: space-around; */
+}
+
+.profile-7 img {
+    width: 80px;
+    height: 80px;
+}
+
+.card-txt-7 p {
+    font-family: sans-serif;
+    font-weight: 500px;
+    font-size: 25px;
+    line-height: 124%;
+}
+
+.profile-txt {
+    display: flex;
+    text-align: left;
+    flex-direction: column;
+}
+
+.profile-7 p {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 500px;
+    font-size: 20px;
+    line-height: 124%;
+    text-align: left;
+}
+
+.list-8 {
+    max-width: 100%;
+    height: 600px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.inp-8 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+
+.sms {
+    display: flex;
+    gap: 18px;
+    flex-direction: column;
+    color: #7B7B7B;
+}
+
+.sms input::placeholder {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400px;
+    font-size: 16px;
+    line-height: 151%;
+    color: #7B7B7B;
+}
+
+
+.sms input {
+    padding-left: 18px;
+    box-shadow: 0px 1px 10px 0px #0000001A;
+    border: none;
+    width: 330px;
+    height: 60px;
+}
+
+.sms textarea {
+    box-shadow: 0px 1px 10px 0px #0000001A;
+    border: none;
+    width: 670px;
+    height: 163px;
+    padding: 18px;
+}
+
+.sms textarea::placeholder {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 151%;
+    color: #7B7B7B;
+}
+
+.sms h4 {
+    font-weight: 600px;
+    font-size: 31px;
+    line-height: 124%;
+}
+
+.sms span {
+    color: #FF5300;
+}
+
+.sms button {
+    width: 190px;
+    height: 50px;
+    border: none;
+    box-shadow: 4px 5px 15px 0px #FF530066;
+    background: #FF5300;
+    color: #fff;
+    font-size: 20px;
+    border-radius: 5px;
+
+}
+
+footer {
+    max-width: 1440px;
+    height: 419px;
+    margin: 0 auto;
+    background: #373737;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-txt {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 37px;
+}
+
+.footer-title {
+    width: 263px;
+    height: 233px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-name {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.footer-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 11px;
+}
+
+.footer-name input {
+    width: 170px;
+    border: none;
+    padding-left: 18px;
+    height: 60px;
+    background: #50505038;
+}
+
+.footer form {
+    display: flex;
+}
+
+.footer-name form button {
+    margin-left: -5px;
+    width: 81px;
+    height: 60px;
+    border: none;
+    font-size: 18px;
+    background: #FF5300;
+    color: white;
+}
+.icon{
+    display: flex;
+    gap: 27px;
+}
+.icon i{
+    width: 40px;
+    height: 40px;
+    background: white;
+    color: #FF5300;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+.footer-title h4 {
+    font-family: sans-serif;
+    font-weight: 600px;
+    font-size: 39px;
+    line-height: 124%;
+}
+
+.footer-title span {
+    color: #FF5300;
+}
+
+.footer-title p {
+    font-family: sans-serif;
+    font-weight: 400px;
+    font-size: 16px;
+    line-height: 151%;
+}
+
 
 /* .program{
     display: flex;
@@ -693,12 +965,108 @@ a {
         overflow: hidden;
     }
 
+    .list-7 {
+        display: flex;
+        flex-direction: column;
+    }
+
     .cards-7 {
         display: flex;
         flex-direction: column;
         overflow: hidden;
     }
 
+    .cards-n7 {
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+        gap: 10px;
+    }
+
+
+    .card-7 {
+        width: 296px;
+        display: flex;
+        justify-content: space-around;
+        margin: 0 auto;
+        margin-top: 18px;
+        height: 220px;
+    }
+
+    .card-txt-7 {
+        display: flex;
+        gap: 10px;
+    }
+
+    .card-txt-7 img {
+        width: 80px;
+        height: 80px;
+    }
+
+
+    .card-txt-7 p {
+        /* display: none; */
+        width: 170px;
+        font-weight: 400px;
+        font-size: 16px;
+        line-height: 151%;
+    }
+
+    .profile-7 {
+        display: none;
+
+    }
+
+    .title-7 h4 {
+        font-weight: 500px;
+        font-size: 25px;
+        line-height: 124%;
+        text-align: center;
+        width: 303px;
+    }
+
+    .inp-8 {
+        display: flex;
+        flex-direction: column;
+        gap: 50px;
+    }
+
+    .inp-8 img {
+        width: 261px;
+        height: 168px;
+        object-fit: cover;
+        margin: 0 auto;
+    }
+
+    .sms {
+        display: flex;
+        justify-content: center;
+        margin: 0 auto;
+    }
+
+    .sms h4 {
+        width: 180px;
+        font-weight: 500;
+        font-size: 25px;
+        margin: 0 auto;
+        line-height: 124%;
+        text-align: center;
+
+    }
+
+    .sms input {
+        display: flex;
+        margin-top: 18px;
+        justify-content: center;
+        width: 343px;
+    }
+
+    .sms textarea {
+        width: 343px;
+    }
+    footer{
+        display: none;
+    }
 
 }
 
@@ -834,7 +1202,7 @@ a {
         gap: 28px;
         padding: 0 11px;
         overflow: hidden;
-        padding: 0 122px;
+        padding: 0 20px;
         background: none;
         display: flex;
     }
@@ -867,5 +1235,53 @@ a {
 
     .card-5 img:hover {
         transform: scale(1.0);
+    }
+
+    .card-txt-7 {
+        display: flex;
+        gap: 10px;
+        margin: 0 auto;
+        justify-content: space-around;
+    }
+
+    .card-7 {
+        width: 332px;
+        height: 260px;
+        display: flex;
+        align-items: center;
+    }
+
+    .card-txt-7 img {
+        width: 80px;
+        height: 80px;
+    }
+
+    .card-txt-7 p {
+        font-weight: 500px;
+        font-size: 20px;
+        display: flex;
+        line-height: 124%;
+        width: 217px;
+    }
+
+    .profile-7 {
+        display: none;
+    }
+
+    .sms input {
+        width: 185px;
+    }
+
+    .sms textarea {
+        width: 370px;
+        height: 109px;
+    }
+
+    .inp-8 img {
+        width: 342px;
+        height: 181px;
+    }
+    footer{
+        display: none;
     }
 }
